--- a/help.html
+++ b/help.html
@@ -2,8 +2,8 @@
 
 <header class="cntHeader">Help</header>
 
-<header id="headerHelp_FAQ" class="jsCollapsible"><img src="img/ui/faq.png" alt="FAQ" />FAQ</header>
-<div>
+<header id="headerHelp_FAQ" class="jsSection"><img src="img/ui/faq.png" alt="FAQ" />FAQ</header>
+<section>
 <p>Overview of <a href="http://i.imgur.com/KvJEr58.png">GW2Timer.com features</a>.</p>
 <h2>What do the colors in the clock mean?</h2>
 <p>As you may know, world boss (WB) chains start exactly 15 minutes apart (X:00, X:15, X:30, X:45), and most of them don't take longer than 15 minutes to complete, so the chains can be neatly fitted into a clock's quadrants. The <strong>bright green</strong> mark is the current WB's start (<strong>dark green</strong> is the next), the <strong>orange</strong> mark is the minimum time it is completed (usually by a full map population), and the <strong>red</strong> mark is the average. If you waypoint to a WB after the red mark is passed, it's likely the boss is already dead, and you'll be placed in a newer map instance with the chain still in the early events. Chains have a 15-20 minutes time limit to start the boss, so you can still make it, but you may miss the next boss because of the 15 minute per boss timeframe overlap.</p>
@@ -37,10 +37,15 @@
 <h2>How do I use the map?</h2>
 <p>The map works like Google Maps: you can drag the map to pan, and you can scroll your mouse wheel to zoom. No UI map controls are included in order to maximize viewing. On the map page, click the star on the bottom right corner or the map menu button itself to default the map view and zoom. Most icons on the map are interactive by clicking/double clicking, most of which causes the map to zoom in that icon, or zoom out back to default. &quot;Pins&quot; look like the colored star symbols you see in the GW2 minimap and are draggable and can be hidden by double clicking; you can lay your own personal pin by double clicking an empty map area.</p>
 <p>Expanding a section on the map page will show their icons, and if you expand many sections you'll probably be overwhelmed by icons, so click the eye button <img class="cntIconExample" src="img/ui/eye.png" alt="Icon" /> on the vertical menu bar to hide all the map icons, then only expand the section you want to view at the moment.</p>
-</div>
+</section>
 
-<header id="headerHelp_About" class="jsCollapsible"><img src="img/ui/about.png" alt="About" />About / Contact</header>
-<div>
+<header id="headerHelp_About" class="jsSection"><img src="img/ui/about.png" alt="About" />About / Contact</header>
+<section>
+
+<h1>Contact</h1>
+<span>Use the <a href="http://www.reddit.com/r/gw2timer/">/r/gw2timer subreddit</a> or the <a href="http://forum.renaka.com/forum/368355/">forum</a> for questions/suggestions/reports; you can post as an unregistered guest at the forum.</span>
+
+<h1>About</h1>
 <p>This web application runs entirely on the client's side, except for API calls to the GW2 server for map data. Few libraries/plugins were used to avoid bloat. It was tested on Firefox/Chrome 2013-2014 and Opera 2013, in 1024x768 through 1920x1200. IE10 or below is not recommended and no kludges were used. Smartphone users with large screen can use this right panel as an &quot;app&quot; (minimum resolution 360x720). User settings are stored in browser <a href="https://en.wikipedia.org/wiki/LocalStorage#localStorage">localStorage</a>. Google Analytics is used to collect visitor's system/browser/locale information; you can <a href="https://www.google.com/search?q=block+Google+Analytics">block it</a> if you wish.</p>
 <h2>History</h2>
 <p>The idea of GW2Timer stemmed from the dissatisfaction (pre-megaserver) of GW2Stuff's lack of individual event information. As a former PVE commander, I needed to know what will be the shortest meta event chain to lead the train to. Although GW2Stuff was excellent at telling people when bosses are happening, it did not reveal the hard work (the pre-events) that more knowledgeable people had to do. GW2Timer uses time statistics of individual events to predict when they will start and finish so players can more effectively manage their playtime.</p>
@@ -52,9 +57,6 @@
 2014 May 15 - Site beta<br />
 2014 June 1 - Gone gold<br />
 </p>
-
-<h1>Contact</h1>
-<p>Use the <a href="http://www.reddit.com/r/gw2timer/">/r/gw2timer subreddit</a> or the <a href="http://forum.renaka.com/forum/368355/">forum</a> for questions/suggestions/reports; you can post as an unregistered guest at the forum.</p>
 
 <hr />
 
@@ -73,11 +75,11 @@
 <h2>ArenaNet Copyright</h2>
 <p>&#169; 2012 ArenaNet, Inc. All rights reserved. NCsoft, the interlocking NC logo, ArenaNet, Arena.net, Guild Wars, Guild Wars Factions, Factions, Guild Wars Nightfall, Nightfall, Guild Wars: Eye of the North, Eye of the North, Guild Wars 2, and all associated logos and designs are trademarks or registered trademarks of NCsoft Corporation. All other trademarks are the property of their respective owners.</p>
 
-</div>
+</section>
 
 
-<header id="headerHelp_Scheduled" class="jsCollapsible"><img src="img/ui/scheduled.png" alt="Scheduled Bosses" />Scheduled Bosses</header>
-<div>
+<header id="headerHelp_Scheduled" class="jsSection"><img src="img/ui/scheduled.png" alt="Scheduled Bosses" />Scheduled Bosses</header>
+<section>
 <h1>Walkthrough</h1>
 
 <p>Some skills useful when doing almost all world bosses are: <a href="http://wiki.guildwars2.com/wiki/Condition#Traits_that_remove_conditions">Condition Removal</a>, <a href="http://wiki.guildwars2.com/wiki/Stun_break">Stun Break</a>, <a href="http://wiki.guildwars2.com/wiki/Invulnerability">Invulnerability</a>, <a href="http://wiki.guildwars2.com/wiki/Reflect">Missile Reflection</a>, and <a href="http://wiki.guildwars2.com/wiki/Range">Range</a>. Bosses with a big distinct health bar cannot be critically hit, so the Precision and Ferocity attribute buffs are useless against them.</p>
@@ -117,11 +119,11 @@
 
 <h2>Tequatl and Triple Wurm</h2>
 <p>A mini-walkthrough will not suffice for these heavy coordination-required bosses. The TTS guild provides a guide for <a href="http://ttsgamers.com/strategy/tequatl/">Tequatl</a> and <a href="http://ttsgamers.com/strategy/great-jungle-wurm/">Triple Wurm</a> (D15-25)</p>
-</div>
+</section>
 
 
-<header id="headerHelp_Unscheduled" class="jsCollapsible"><img src="img/event/boss.png" alt="Unscheduled Bosses" />Unscheduled Bosses</header>
-<div>
+<header id="headerHelp_Unscheduled" class="jsSection"><img src="img/event/boss.png" alt="Unscheduled Bosses" />Unscheduled Bosses</header>
+<section>
 <h2>Fire Shaman</h2>
 <p>Jump through a <ins data-coord="[27494, 9876]">crevice</ins> in the obsidian wall to get to the boss. His phases are as follows: Minions -&gt; Boss -&gt; Minions -&gt; Boss -&gt; Minions -&gt; Boss. You can attack the boss normally, but during the minions phase, you have to kill enough minions for the boss to be attackable again. There is a hidden mechanic (or bug) where stepping near the giant <ins data-coord="[27415, 9639]">Fire Elemental</ins> will cause the event's progress to reset, so people should stay and kill minions near the heal bubble the charr allies made. Crossing the fire lines or attacking the boss is okay as long as nobody touches the giant Fire Elemental, but you should not take this chance as ignorant players will follow you and bungle it. This chain restarts after 25-35 minutes. (D15-25)</p>
 
@@ -133,11 +135,11 @@
 
 <h2>Eye of Zhaitan</h2>
 <p>Take the Rally Waypoint in Straits and run to the <ins data-coord="[15319, 24772]">claw-like structure</ins> in the minimap southeast of Balthazar Temple. Follow the path indicated to get to the catacombs and destroy the <ins data-coord="[15149, 24961]">coffins</ins>, then you'll need to kill three risens, which the hardest to solo is the <ins data-coord="[15309, 25088]">noble</ins>. After you have killed them and waited 15-25 minutes, the <ins data-coord="[16114, 24933]">AA gun and escort mission</ins> will follow, which should also be soloed else three deadly champion abominations will spawn for large groups. Once inside the catacombs, it will take 5-15 people to kill the <ins data-coord="[15192, 24961]">champion abomination</ins> that spawns in the room just before the coffin room. Its single strike will down most players, so strafe and dodge with invulnerability skills equipped. The final boss Eye of Zhaitan is a cakewalk, though you should kill the risen adds that may heal it. <ins data-coord="[15068, 24960]">Escort</ins> the NPCs out the west side of catacombs and the chain will restart in 9-12 minutes. (D3-5)</p>
-</div>
+</section>
 
 
-<header id="headerHelp_Temples" class="jsCollapsible"><img src="img/chain/temple.png" alt="Temples" />Temples</header>
-<div>
+<header id="headerHelp_Temples" class="jsSection"><img src="img/chain/temple.png" alt="Temples" />Temples</header>
+<section>
 All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/wiki/Temple_armor">karma vendor</a> for 1.5-2 hours selling exotic armor and trinkets.
 
 <h2>Lyssa</h2>
@@ -169,11 +171,11 @@ All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/w
 
 <h3>Balthazar Escort</h3>
 <p>The reason why this temple is the rarest to be open is Veteran Risen Subjugators. They have a ludicrous attack (heard as a warhorn) that conjures multiple scattered necro wells that nukes the pact NPCs in 2-3 seconds, and so instantly fails the chain that had been worked so hard on. The sharp turns in the Balthazar <ins data-coord="[15231, 24062]">final escort</ins> route indicates where the subjugators usually spawn (they have multiple random spawns), and there are about 4 waves of them. You should turn enemy names on always so you can quickly find and suppress the subjugators using <a href="http://wiki.guildwars2.com/wiki/Control_effect">crowd control</a> skills and prevent them from ever using their dooming attack. The priority of the mission should be: subjugators, any vets, healing/buffing the NPCs, then finally regular mobs. Once you have made it to the stone slope up to the <ins data-coord="[15046, 24546]">temple</ins>, you have pretty much succeeded the chain, unless the morale bar is 1% left. After the seizing the altar, the priest should be focused using range if the group is small, or melee if large, but nevertheless avoid and ignore the distracting abomination, and in short time the temple will be yours. It will remain open for 1.5-2 hours, until a powerful champion risen wraith comes to reap it back; if you should succeed, the temple will open for another 1-1.5 hours and loops the defense event, otherwise you will need to backtrack to the subchain to repeat Balthazar.</p>
-</div>
+</section>
 
 
-<header id="headerHelp_Dungeons" class="jsCollapsible"><img src="img/ui/dungeon.png" alt="Dungeons" />Dungeons</header>
-<div>
+<header id="headerHelp_Dungeons" class="jsSection"><img src="img/ui/dungeon.png" alt="Dungeons" />Dungeons</header>
+<section>
 <h2>Gates of Arah (The Ruined City of Arah)</h2>
 <p>Although this chain does not reward a rare nor give dragonite, people still do it for the level 80 mobs. The chain starts when a player is near <ins data-coord="[11062, 27370]">Chan</ins>. To not scale the event, solo or duo it up until the <ins data-coord="[11005, 27891]">Anchorage camp</ins>, where you must climb two bone towers on the northeast and southeast corner of the camp to destroy the cauldrons up top, then you will need to quickly call for help in killing the champ knight before the time limit. With the camp secure, you can do any of the three concurrent events before the assault begin at the timer's end (or not do them at all), as completing each one bolsters the reinforcement. <ins data-coord="[11128, 27827]">Didi's</ins> event is the most useful as she will provide a durable golem to tank the champ giant ahead. Note that when any of the events on the promenade is active, the Arah dungeon (its waypoint) will be contested. Capturing the <ins data-coord="[11645, 27853]">promenade</ins> simply requires you to kill the risens in the capture circle, and you should avoid the deadly eye of zhaitan if your group is small. The final boss can be meleed, but you should mind the surrounding mobs and statue debuffs. A retake event will occur 1.5-2 hours after, and if succeeded will loop in 1-1.5 hours, else a grace defense event on Anchorage will happen which loops the retake event if succeeded, or restarts the chain in 8-10 minutes if failed.</p>
 
@@ -182,7 +184,7 @@ All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/w
 
 <h2>Toil for the Coil (Crucible of Eternity)</h2>
 <p>Unlocking COE takes about 10 minutes from start to finish soloing, and much faster with a group. Start at the camp west of COE and follow the NPCs to do the <ins data-coord="[19954, 21625]">troll cave</ins>, then the assault will start back at the camp towards the <ins data-coord="[20555, 21919]">west entrance</ins> of COE (left side of the hexagon). If you somehow fail to reach COE, the chain will restart in 9 minutes. Else, you have unlimited time to clear the corners of the hexagon before a champ is spawned in the center, which is soloable if you dodge his slow missiles. COE will be open for 1.5-2 hours before a retake event at the <ins data-coord="[20978, 21894]">dungeon portal</ins> happens, which loops every 45 minutes if succeeded, or restarts the chain in 5-10 minutes if failed.</p>
-</div>
+</section>
 <br />
 
 </div><!-- End of page -->
