Fixed custom checklist not saving

--- a/map.html
+++ b/map.html
@@ -55,6 +55,7 @@ var GW2T_RESOURCES_DATA = {
 	Platinum: {
 		nodes: [
 		[16427, 18188], // bloodtide
+		[16186, 17581], // bloodtide
 		[15599, 20283], // sparkfly
 		[17300, 20347], // sparkfly
 		[17938, 22158], // maelstrom
