Minor changes to writings

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>GW2Timer - World Boss Timers and Daily Map Guide for Guild Wars 2</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
-	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events, with walkthroughs, daily achievements, jumping puzzles, and personal checklists." />
+	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events, with walkthroughs, daily achievements, jumping puzzles gathering map, and personal checklists." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 
 	<!-- Stylesheets -->
@@ -60,8 +60,8 @@
 				<input id="mapCoordinatesRegion" type="text" />
 			</div>
 			<div id="itemMapButtons">
-				<a title="News and Forum" href="http://forum.renaka.com/forum/368355/" target="_blank">GW2Timer.com</a>
-				<img title="Toggle Right Panel" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
+				<a title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">GW2Timer.com</a>
+				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
 			</div>
 		</section>
 	</div><!-- End of panelLeft -->
@@ -153,13 +153,13 @@
 			<time id="itemTimeLocal" class="itemTimeDigital">00:00</time>
 			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
 			<div id="itemSocial">
-				<a title="<dfn>Learn GW2Timer's features :?</dfn>" href="http://i.imgur.com/KvJEr58.png" target="_blank">
+				<a title="<dfn>Learn GW2Timer's features :?</dfn>" href="http://i.imgur.com/KvJEr58.png">
 					<img src="img/ui/info.png" alt="Info" />
 				</a>
-				<a title="<dfn>Like GW2Timer on Facebook :)</dfn>" href="http://www.facebook.com/gw2timer" target="_blank">
+				<a title="<dfn>Like GW2Timer on Facebook :)</dfn>" href="http://www.facebook.com/gw2timer">
 					<img src="img/ui/fb.png" alt="Facebook" />
 				</a>
-				<a title="<dfn>Tweet GW2Timer on Twitter :)</dfn>" href="http://twitter.com/intent/tweet?text=http%3A%2F%2FGW2Timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide" target="_blank">
+				<a title="<dfn>Tweet GW2Timer on Twitter :)</dfn>" href="http://twitter.com/intent/tweet?text=http%3A%2F%2FGW2Timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide">
 					<img src="img/ui/tt.png" alt="Twitter" />
 				</a>
 			</div>
@@ -179,7 +179,7 @@
 			<a id="jsCenter" title="Map Center"></a>
 			<article id="layerChains"><!-- This layer will be populated by JS -->
 				<div id="optSound">
-					<label title="<dfn>Alarm Mode:</dfn> Unchecked--Alert the next world boss (checklist mode). Checked--Alert bosses whose times you clicked (subscription mode). Speaker icon must be checked to hear sound.">
+					<label title="<dfn>Alarm Mode:</dfn> Unchecked--Alert the next world boss (checklist mode). Checked--Alert bosses whose time you clicked (subscription mode). Speaker icon must be checked to hear sound.">
 						<input id="opt_bol_alertSubscribed" type="checkbox" />
 					</label>
 					<label title="<dfn>Enable/Disable Alarm.</dfn> Go to Options page &gt; Alarm section for more info.">
