--- a/map.html
+++ b/map.html
@@ -248,7 +248,7 @@ var GW2T_RESOURCES_DATA = {
 
 <div class="cntComposition">
 
-<header class="cntHeader">Map<samp class="jsHelpTooltip" title="All checklists are automatically saved in your browser and are restored when you revisit this site. Use the Uncheck All button at every checklists, or go to Options under Defaults to clear everything."></samp></header>
+<header class="cntHeader">Map</header>
 
 <header id="headerMap_Zone" class="jsSection"><img src="img/map/completion.png" alt="Map Zones" />Map Zones</header>
 <section>
@@ -319,7 +319,7 @@ var GW2T_RESOURCES_DATA = {
 <div class="mapDailyLists mapLinks">
 <h2><img src="img/daily/killer.png" alt="Killer" /> Killer</h2>
 <dl id="mapDailyList_Killer">
-	<dt data-coord="[10055, 13446]">Altar's Windings</dt><dd>Kryta-Queensdale troll cave grubs, bandit camp</dd>
+	<dt data-coord="[10055, 13446]">Altar's Windings</dt><dd>Kryta-Queensdale troll cave grubs, spiders, bandit camp</dd>
 	<dt data-coord="[9993, 16259]">Wychmire Swamp</dt><dd>Maguuma-Caledon spiders nest</dd>
 	<dt data-coord="[22587, 15535]">Outcast's Cleft</dt><dd>Shiverpeaks-Wayfarer svanirs</dd>
 	<dt data-coord="[23136, 13562]">Grawlenfjord</dt><dd>Shiverpeaks-Wayfarer arctodus and barracudas</dd>
@@ -510,7 +510,7 @@ A marathon of intricate jumps.
 <samp class="jsHelpCollapsible"></samp>
 <div><br /><p>You can <strong>disable</strong> a checkbox by double clicking it (for dungeon paths you never do), and you can <strong>re-enable</strong> a checkbox by double clicking the number next to it.</p>
 <p>Money sum is daily path reward (26 silver + bonus chest) and do not count Bag of Coins, loot, etc. Each numbered path gives 40+20 tokens. More on <a href="http://wiki.guildwars2.com/wiki/Dungeon">dungeon rewards</a>.</p>
-<p>The personal checklist is automatically cleared after server reset, unless set otherwise in the options.</p>
+<p>The personal checklist is automatically cleared after server reset, unless set otherwise in the Options.</p>
 </div>
 <div id="chlDungeon">
 	<div id="chlDungeonCalculator" data-moneyaddexp="2600">
@@ -599,5 +599,18 @@ A marathon of intricate jumps.
 </div>
 <br />
 </section>
+
+<br />
+<samp class="jsHelpCollapsible"></samp>
+<div>
+<h2>Checklists</h2>
+<p>All checklists are automatically saved in your browser and are restored when you revisit this site. Use the Uncheck All button at every checklists, or go to Options under Defaults to clear everything.</p>
+<h2>Map</h2>
+<p>The map works like Google Maps: you can drag the map to pan, and you can scroll your mouse wheel to zoom. No UI map controls are included in order to maximize viewing. For default view and zoom, click the star button <img class="cntIconExample" src="img/map/star.png" alt="Icon" /> on the side menu or the map page button.
+<h2>Icons</h2>	
+<p>Expanding a section will show that section's map icons, and collapsing a section hides them. To view multiple sections' icons, click the section names and keep them expanded. Else, use the sidebar menu to view one section at a time.</p>
+<p>Map icons are interactive by clicking/double clicking, most of which causes the map to zoom in that icon, or zoom out back to default. &quot;Pins&quot; look like the colored star symbols you see in the GW2 minimap and are draggable and can be hidden by double clicking; you can lay your own personal pin by double clicking an empty map area.</p>
+</div>
+<br />
 
 </div><!-- End of page -->
