--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 			<a id="jsCenter" title="Map Center"></a>
 			<article id="layerChains"><!-- This layer will be populated by JS -->
 				<div id="optSound">
-					<label title="<dfn>Alarm Mode:</dfn> Unchecked--Alert the next world boss (checklist mode). Checked--Alert bosses whose time you clicked (subscription mode). Speaker icon must be checked to hear sound.">
+					<label title="<dfn>Alarm Mode:</dfn> Unchecked--Announce the next world boss (checklist mode). Checked--Announce bosses whose time you clicked (subscription mode). Speaker icon must be checked to hear sound.">
 						<input id="opt_bol_alertSubscribed" type="checkbox" />
 					</label>
 					<label title="<dfn>Enable/Disable Alarm.</dfn> Go to Options page &gt; Alarm section for more info.">
