Added chain concurrency, alpha stage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
 	<script type="text/javascript" src="zones.js"></script>
-	<script type="text/javascript" src="metas.js"></script>
+	<script type="text/javascript" src="chains.js"></script>
 	<script type="text/javascript" src="gw2t.js"></script>
 <!-- Google Analytics -->
 <script>
