Attempt to refresh website

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<label title="<dfn>Alarm Mode:</dfn><br />If <input type='checkbox' /> Announce the next world boss (checklist mode).<br />If <input type='checkbox' checked='checked' /> Announce bosses whose time you clicked (subscription mode). Speaker icon must be checked to hear sound.">
 						<input id="opt_bol_alertSubscribed" type="checkbox" />
 					</label>
-					<label title="<dfn>Enable/Disable Alarm.</dfn> Go to Options page &gt; Alarm section for more info.">
+					<label title="<dfn>Alarm Toggle:</dfn><br />If <input type='checkbox' /> Disabled Alarm<br />If <input type='checkbox' checked='checked' /> Enabled Alarm<br />Go to Options page &gt; Alarm section for more info.">
 						<input id="opt_bol_enableSound" type="checkbox" /><img src="img/ui/speaker.png" alt="Mute"/>&zwnj;
 					</label>
 				</div>
